Create first React component

--- a/app/views/photos/tag.html.erb
+++ b/app/views/photos/tag.html.erb
@@ -1,1 +1,2 @@
-<%= react_component('HelloMessage', name: 'John') %>
+Hello above react component <br/>
+<%= react_component('TagPhoto', id: 'ASDF1234') %>
