Fetch a random photo from Flickr

--- a/app/views/photos/tag.html.erb
+++ b/app/views/photos/tag.html.erb
@@ -1,2 +1,1 @@
-Hello above react component <br/>
-<%= react_component('TagPhoto', id: 'ASDF1234') %>
+<%= react_component('TagPhoto', url: @photo_url) %>
