--- a/app/views/photos/tag.html.erb
+++ b/app/views/photos/tag.html.erb
@@ -1,1 +1,1 @@
-<%= react_component('TagPhoto', flickrId: @flickr_id, url: @photo_url) %>
+<%= react_component('TagPhoto', flickrId: @flickr_id, url: @photo_url, userTags: @user_tags) %>
