--- a/app/assets/stylesheets/photos.less
+++ b/app/assets/stylesheets/photos.less
@@ -1,3 +1,20 @@
+.above-image {
+  height      : 80px;
+  padding     : (2 * @padding-large-vertical) 0;
+
+  span {
+    font-size     : 1.4em;
+  }
+}
+
+.tagger-holder {
+  text-align    : center;
+}
+
 .image-holder {
   position    : relative;
+  display     : inline-block;
+
+  img {
+  }
 }
