--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -10,10 +10,11 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_self
  *= require bootstrap/bootstrap
+ *= require_self
  */
 
 @import "./imgareaselect-default.css";
 @import "./photos.less";
 @import "./typeahead.less";
+@import "./sidebar.less";
