Show tag on top of image on tags#show

--- a/app/assets/stylesheets/photos.less
+++ b/app/assets/stylesheets/photos.less
@@ -18,3 +18,13 @@
   img {
   }
 }
+
+.tag-area {
+  background    : rgba(255,255,255,0.3);
+  border        : 1px solid rgba(255,255,255,0.5);
+  position      : absolute;
+  color         : white;
+  padding       : @padding-base-vertical @padding-base-horizontal;
+  font-size     : 1.3em;
+  text-shadow   : 0 0 2px black;
+}
