Change color of links

--- a/app/assets/stylesheets/sidebar.less
+++ b/app/assets/stylesheets/sidebar.less
@@ -18,8 +18,11 @@
 
     li.active {
       a {
-        background-color    : @link-color;
-        color               : white;
+        background-color    : lighten(@link-color, 40%);
+        color               : @text-color;
+        @border-width       : 4px;
+        border-left         : @border-width solid @link-color;
+        padding-left        : (15px - @border-width); // Subtract 4px from @nav-link-padding
       }
     }
 
