--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -15,6 +15,8 @@
  */
 
 @import "./imgareaselect-default.css";
+@import "./shared.less";
+@import "./devise.less";
 @import "./photos.less";
 @import "./typeahead.less";
 @import "./sidebar.less";
