Sidebar state when no tags have been created

--- a/app/assets/stylesheets/sidebar.less
+++ b/app/assets/stylesheets/sidebar.less
@@ -26,9 +26,16 @@
       }
     }
 
+    li.no-link {
+      padding     : @nav-link-padding;
+    }
+
+    li.none-yet {
+      color     : @gray-light;
+    }
+
     li.divider {
       font-size   : 0.9em;
-      padding     : @nav-link-padding;
     }
 
     &.tagged-photos {
