--- a/app/assets/stylesheets/sidebar.less
+++ b/app/assets/stylesheets/sidebar.less
@@ -1,4 +1,5 @@
 @import "bootstrap/variables";
+@import "bootstrap/mixins";
 
 .sidebar {
   background  : white;
@@ -15,6 +16,12 @@
 
   .nav-sidebar {
     margin  : 0 -(@grid-gutter-width/2) (2 * @padding-large-vertical) -(@grid-gutter-width/2);
+
+    li {
+      a {
+        .transition(~"background-color 0.3s, color 0.3s");
+      }
+    }
 
     li.active {
       a {
