Include font-awesome for loading spinner

--- a/app/assets/stylesheets/photos.less
+++ b/app/assets/stylesheets/photos.less
@@ -24,9 +24,10 @@
 
   .loading-message {
     position  : absolute;
-    top       : 30px;
+    top       : 40px;
     width     : 100%;
-    
+    font-size : 3em;
+    color     : white;
   }
 }
 
