--- a/app/assets/stylesheets/bootstrap/variables.less
+++ b/app/assets/stylesheets/bootstrap/variables.less
@@ -14,8 +14,7 @@
 @gray-light:             lighten(@gray-base, 46.7%); // #777
 @gray-lighter:           lighten(@gray-base, 85%); // #eee
 
-// @brand-primary:         darken(#428bca, 6.5%); // #337ab7
-@brand-primary:         rgb(255,102,1);
+@brand-primary:         #cd5d12;
 @brand-success:         #5cb85c;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
