Fixing imageareaselect css file import

--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -13,9 +13,9 @@
  *= require bootstrap/bootstrap
  *= require font-awesome
  *= require_self
+ *= require imgareaselect-default
  */
 
-@import "./imgareaselect-default.css";
 @import "./shared.less";
 @import "./devise.less";
 @import "./photos.less";
