--- a/app/assets/stylesheets/imgareaselect-default.less
+++ b/app/assets/stylesheets/imgareaselect-default.less
@@ -3,19 +3,19 @@
  */
 
 .imgareaselect-border1 {
-	background: url(border-v.gif) repeat-y left top;
+	background: image-url("border-v.gif") repeat-y left top;
 }
 
 .imgareaselect-border2 {
-    background: url(border-h.gif) repeat-x left top;
+    background: image-url("border-h.gif") repeat-x left top;
 }
 
 .imgareaselect-border3 {
-    background: url(border-v.gif) repeat-y right top;
+    background: image-url("border-v.gif") repeat-y right top;
 }
 
 .imgareaselect-border4 {
-    background: url(border-h.gif) repeat-x left bottom;
+    background: image-url("border-h.gif") repeat-x left bottom;
 }
 
 .imgareaselect-border1, .imgareaselect-border2,
@@ -37,5 +37,5 @@
     opacity: 0.5;
 }
 
-.imgareaselect-selection {  
+.imgareaselect-selection {
 }
