--- a/app/assets/stylesheets/typeahead.less
+++ b/app/assets/stylesheets/typeahead.less
@@ -1,3 +1,4 @@
+@import "bootstrap/variables";
 @import "bootstrap/mixins";
 
 .typeahead-holder {
@@ -21,5 +22,13 @@
   .typeahead {
     right   : -1px;
     left    : -1px;
+  }
+
+  .hint {
+    position        : absolute;
+    right           : 15px;
+    top             : 13px;
+    pointer-events  : none;
+    color           : @gray-lighter;
   }
 }
