--- a/app/assets/stylesheets/sidebar.less
+++ b/app/assets/stylesheets/sidebar.less
@@ -18,8 +18,12 @@
     margin  : 0 -(@grid-gutter-width/2) (2 * @padding-large-vertical) -(@grid-gutter-width/2);
 
     li {
+      img {
+        margin-right    : @padding-large-horizontal;
+      }
       a {
         .transition(~"background-color 0.3s, color 0.3s");
+        text-transform    : capitalize;
       }
     }
 
