Switch from tag to show view after tag has been submitted

--- a/app/assets/stylesheets/photos.less
+++ b/app/assets/stylesheets/photos.less
@@ -1,5 +1,5 @@
 .above-image {
-  height      : 80px;
+  height      : 35px + (4 * @padding-large-vertical);
   padding     : (2 * @padding-large-vertical) 0;
 
   span {
